--- a/src/widgets/catalogBlock/UI/catalogList/UI/styles.module.scss
+++ b/src/widgets/catalogBlock/UI/catalogList/UI/styles.module.scss
@@ -3,3 +3,20 @@
   grid-auto-flow: row;
   row-gap: 10px;
 }
+
+.filters {
+  display: grid;
+  grid-auto-flow: column;
+  align-items: center;
+  justify-content: space-between;
+
+  span {
+    color: var(--Personal-colors-black);
+
+    text-align: center;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+  }
+}
