feat: add Cart Page

--- a/src/widgets/catalogBlock/UI/catalogSearch/UI/styles.module.scss
+++ b/src/widgets/catalogBlock/UI/catalogSearch/UI/styles.module.scss
@@ -16,7 +16,7 @@
   box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.15);
 }
 
-.recommendation {
+.recomendation {
   display: grid;
   grid-auto-flow: column;
   column-gap: 10px;
