--- a/src/features/aiFilter/UI/styles.module.scss
+++ b/src/features/aiFilter/UI/styles.module.scss
@@ -1,20 +1,19 @@
-.wrapper{
-    display: grid;
-    grid-auto-flow: column;
-    column-gap: 10px;
-    justify-content: center;
+.wrapper {
+  display: grid;
+  grid-auto-flow: column;
+  column-gap: 10px;
+  justify-content: center;
 }
 
 .button {
-    border-radius: 15px;
-    border: 1px solid #4772e6;
-    padding: 10px;
-  
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
-    color: var(--Gradients-Gradient-1);
-    background: #FFF ;
-  }
-  
+  border-radius: 15px;
+  border: 1px solid #4772e6;
+  padding: 10px;
+
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  color: var(--Gradients-Gradient-1);
+  background: #fff;
+}
