--- a/src/features/postButtons/UI/styles.module.scss
+++ b/src/features/postButtons/UI/styles.module.scss
@@ -77,7 +77,7 @@
 
     div{
         display: grid;
-        grid-auto-flow: column;
+        grid-template: 1fr/0.3fr 1fr;
         column-gap: 10px;
         align-items: center;
         justify-content: space-between;
