--- a/src/widgets/header/UI/chat/styles.module.scss
+++ b/src/widgets/header/UI/chat/styles.module.scss
@@ -1,5 +1,151 @@
-.chat {
+.wrapper {
   width: 30px;
   height: 30px;
   cursor: pointer;
+}
+
+
+.modal {
+  display: grid;
+  align-items: center;
+  justify-content: center;
+  
+  position: fixed;
+  z-index: 10;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(5px);
+}
+
+.modalContent{
+  display: grid;
+  // width: 650px;
+  align-items: center;
+  grid-auto-flow: row;
+  row-gap: 25px;
+  position: relative;
+  margin: 15% auto;
+  // padding: 35px;
+  border-radius: 25px;
+  background: #fff;
+}
+
+
+.top{
+  display: grid;
+  grid-auto-flow: column;
+  align-items: center;
+  justify-content: space-between;
+
+  p{
+      font-size: 24px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 12px; /* 50% */
+      color: #4772E6;
+  }
+
+  svg{
+      width: 20px;
+      height: 20px;
+  }
+}
+
+.content{
+  display: grid;
+  grid-auto-flow: column;
+  column-gap: 10px;
+
+}
+.content__left{
+  display: grid;
+  grid-auto-flow: row;
+  align-content: start;
+  max-width: 370px;
+
+  big{
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 0.75; 
+    color: #4772E6;
+    padding: 25px 0;
+    text-align: center;
+  }
+
+}
+
+.administration{
+  display: grid;
+  grid-auto-flow: column;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 10px 10px 35px ;
+  cursor: pointer;
+
+  div{
+    display: grid;
+    justify-content: center;
+    align-content: center;
+
+    img{
+        width: 25px;
+        height: 25px;
+        border-radius: 50%;
+        border: 0.5px solid #4772E6;
+    }
+  }
+
+  p{
+    color: var(--Sub-text);
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 0.75; 
+  }
+}
+
+.all_chats{
+  display: grid;
+  grid-auto-flow: row;
+  align-content: start;
+  overflow-y: scroll;
+  height: 450px;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    display: none;
+  }
+}
+
+.content__right{
+  display: grid;
+  grid-auto-flow: row;
+  align-content: space-between;
+  width: 460px;
+  padding-right: 10px;
+  padding-bottom: 10px;
+}
+
+.top{
+
+  display: grid;
+  align-items: center;
+  justify-content: end;
+  padding: 25px 30px 20px 30px;
+  button{
+    
+      svg{
+        width: 20px;
+        height: 20px;
+    }
+  }
+
 }
