--- a/src/features/barHistory/UI/styles.module.scss
+++ b/src/features/barHistory/UI/styles.module.scss
@@ -1,20 +1,19 @@
-.wrapper{
-    display: grid;
-    grid-auto-flow: column;
-    align-items: center;
-    border-radius: 12px;
-    border: 1px solid var(--Containers, #8C8C8C);
-    background: var(--Personal-colors-White);
-    padding: 10px 0 ;
+.wrapper {
+  display: grid;
+  grid-auto-flow: column;
+  align-items: center;
+  border-radius: 12px;
+  border: 1px solid var(--Containers, #8c8c8c);
+  background: var(--Personal-colors-White);
+  padding: 10px 0;
 
-
-    div{
-        p{
-            padding: 10px 30px ;
-        }
+  div {
+    p {
+      padding: 10px 30px;
     }
+  }
 }
 
-.info{
-    border-right: 1px solid #D9D9D9;
+.info {
+  border-right: 1px solid #d9d9d9;
 }
