--- a/src/features/calendar/UI/styles.scss
+++ b/src/features/calendar/UI/styles.scss
@@ -1,5 +1,3 @@
-
-
 .react-calendar {
   width: 320px;
   max-width: 100%;
@@ -25,7 +23,10 @@
     }
   }
 
-  &, *, &:before, &:after {
+  &,
+  *,
+  &:before,
+  &:after {
     box-sizing: border-box;
   }
 
@@ -126,7 +127,8 @@
     &--hasActive {
       background: var(--Gradients-Gradient-1);
 
-      &:enabled:hover, &:enabled:focus {
+      &:enabled:hover,
+      &:enabled:focus {
         background: #f8f8fa;
       }
     }
@@ -137,14 +139,15 @@
       // font-weight: bold;
       color: white;
 
-      &:enabled:hover, &:enabled:focus {
+      &:enabled:hover,
+      &:enabled:focus {
         background: var(--Gradients-Gradient-1);
         color: white;
       }
     }
 
     &--range {
-      background: rgba(71, 113, 230, 0.50);
+      background: rgba(71, 113, 230, 0.5);
       border-radius: 0;
     }
 
