--- a/src/features/chatMessages/UI/styles.module.scss
+++ b/src/features/chatMessages/UI/styles.module.scss
@@ -1,110 +1,108 @@
-.wrapper{
-    display: grid;
-    grid-auto-flow: row;
-
+.wrapper {
+  display: grid;
+  grid-auto-flow: row;
 }
 
-.info{
-    display: grid;
-    grid-auto-flow: column;
-    column-gap: 10px;
+.info {
+  display: grid;
+  grid-auto-flow: column;
+  column-gap: 10px;
+  justify-content: start;
+  padding: 10px;
+}
+
+.logo {
+  img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border: 0.5px solid #4772e6;
+  }
+}
+
+.card__message {
+  display: grid;
+  grid-auto-flow: column;
+  justify-content: space-between;
+}
+
+.description {
+  display: grid;
+  grid-auto-flow: row;
+  row-gap: 10px;
+
+  p {
+    color: var(--Sub-text);
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 0.75;
+  }
+}
+
+.all__messages {
+  display: grid;
+  grid-auto-flow: row;
+  row-gap: 15px;
+  height: 350px;
+  overflow-y: scroll;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    display: none;
+  }
+}
+
+.row__message {
+  display: flex;
+  &.recipient {
     justify-content: start;
-    padding: 10px;
+  }
+
+  &.sender {
+    justify-content: end;
+  }
 }
 
-.logo{
-    img{
-        width: 40px;
-        height: 40px;
-        border-radius: 50%;
-        border: 0.5px solid #4772E6;
-    }
+.message {
+  display: grid;
+  grid-auto-flow: row;
+  padding: 8px 16px;
+  border-radius: 10px;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  max-width: 80%;
+
+  span {
+    text-align: end;
+  }
+
+  &.recipient {
+    background: #f0f4f8;
+    color: var(--Sub-text);
+  }
+
+  &.sender {
+    background: #7d5ce9;
+    color: #fff;
+  }
 }
+.date {
+  display: flex;
+  justify-content: center;
 
-.card__message{
-    display: grid;
-    grid-auto-flow: column;
-    justify-content: space-between;
-}
-
-.description{
-    display: grid;
-    grid-auto-flow: row;
-    row-gap: 10px;
-
-    p{
-        color: var(--Sub-text);
-        font-size: 12px;
-        font-style: normal;
-        font-weight: 600;
-        line-height: 0.75
-    }
-
-}
-
-.all__messages{
-    display: grid;
-    grid-auto-flow: row;
-    row-gap: 15px;
-    height: 350px;
-    overflow-y: scroll;
-  
-    &::-webkit-scrollbar {
-      display: none;
-    }
-  
-    &::-webkit-scrollbar-thumb {
-      display: none;
-    }
-}
-
-.row__message{
-    display: flex;
-    &.recipient{
-        justify-content: start;
-    }
-    
-    &.sender{
-        justify-content: end;
-    }
-}
-
-.message{
-    display: grid;
-    grid-auto-flow: row;
-    padding: 8px 16px;
+  p {
+    color: #fff;
+    padding: 5px 10px;
+    background: rgba(71, 113, 230, 0.5);
     border-radius: 10px;
     font-size: 12px;
     font-style: normal;
     font-weight: 500;
-    max-width: 80%;
-
-    span{
-        text-align: end;
-    }
-
-    &.recipient{
-        background: #F0F4F8;
-        color: var(--Sub-text);
-    }
-    
-    &.sender{
-        background: #7D5CE9;
-        color: #FFF;
-    }
-}
-.date{
-    display: flex;
-    justify-content: center;
-    
-    p{
-        color: #FFF;
-        padding: 5px 10px;
-        background: rgba(71, 113, 230, 0.5);
-        border-radius: 10px;
-        font-size: 12px;
-        font-style: normal;
-        font-weight: 500;
-        line-height: 0.75;
-    }
+    line-height: 0.75;
+  }
 }
