--- a/src/features/historyCard/UI/styles.module.scss
+++ b/src/features/historyCard/UI/styles.module.scss
@@ -1,32 +1,31 @@
-.wrapper{
-    display: grid;
-    grid-auto-flow: column;
-    align-items: center;
+.wrapper {
+  display: grid;
+  grid-auto-flow: column;
+  align-items: center;
 
-    border-radius: 12px;
-    border: 1px solid var(--Containers, #8C8C8C);
-    background: var(--Personal-colors-White, #FFF);
-    padding: 10px 0;
+  border-radius: 12px;
+  border: 1px solid var(--Containers, #8c8c8c);
+  background: var(--Personal-colors-White, #fff);
+  padding: 10px 0;
 
-    div{
-        padding: 15px 30px;
-        p{
-            color: var(--Personal-colors-black);
-            font-size: 16px;
-            font-style: normal;
-            font-weight: 500;
-
-        }
+  div {
+    padding: 15px 30px;
+    p {
+      color: var(--Personal-colors-black);
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 500;
     }
+  }
 }
 
-.info{
-    border-right: 1px solid #D9D9D9;
+.info {
+  border-right: 1px solid #d9d9d9;
 }
 
-.status{
-    display: grid;
-    grid-auto-flow: column;
-    align-items: center;
-    justify-content: space-between;
+.status {
+  display: grid;
+  grid-auto-flow: column;
+  align-items: center;
+  justify-content: space-between;
 }
