--- a/src/shared/styles/global.scss
+++ b/src/shared/styles/global.scss
@@ -60,26 +60,27 @@ body {
   padding-left: 75px;
 }
 
-
 .blur {
   position: relative;
   z-index: 1;
   pointer-events: none;
-  
+
   &::before {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(255, 255, 255, 0.5);
-      backdrop-filter: blur(5px);
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(5px);
   }
 }
 
-.shake__animation{
-  animation: slideInFromRight 0.3s ease-in-out forwards, shake 0.3s ease-in-out 0.1s forwards;
+.shake__animation {
+  animation:
+    slideInFromRight 0.3s ease-in-out forwards,
+    shake 0.3s ease-in-out 0.1s forwards;
 }
 
 @keyframes slideInFromRight {
@@ -93,16 +94,16 @@ body {
 
 @keyframes shake {
   0% {
-      transform: translateX(0);
+    transform: translateX(0);
   }
   25% {
-      transform: translateX(-100px);
+    transform: translateX(-100px);
   }
   50% {
-      transform: translateX(15px);
+    transform: translateX(15px);
   }
 
   100% {
-      transform: translateX(0);
+    transform: translateX(0);
   }
 }
