--- a/src/widgets/createOrderPost/UI/styles.module.scss
+++ b/src/widgets/createOrderPost/UI/styles.module.scss
@@ -1,71 +1,69 @@
-.wrapper{
-    display: grid;
-    grid-auto-flow: row;
-    row-gap: 30px;
-    padding-top: 30px;
-    margin-bottom: 50px;
+.wrapper {
+  display: grid;
+  grid-auto-flow: row;
+  row-gap: 30px;
+  padding-top: 30px;
+  margin-bottom: 50px;
 }
 
-.content{
+.content {
+  display: grid;
+  grid-auto-flow: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.title {
+  display: grid;
+  grid-auto-flow: column;
+  align-items: center;
+  justify-content: start;
+  column-gap: 30px;
+
+  span {
     display: grid;
-    grid-auto-flow: column;
+    justify-content: center;
     align-items: center;
-    justify-content: space-between;
+    width: 80px;
+    height: 80px;
+    border: 4px dashed #4772e6;
+    border-radius: 50%;
+    font-size: 44px;
+    font-weight: bold;
+    line-height: 1;
+    color: #4772e6;
+  }
+
+  p {
+    color: var(--Personal-colors-black);
+    font-size: 34px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+  }
 }
 
-.title{
-    display: grid;
-    grid-auto-flow: column;
-    align-items: center;
-    justify-content: start;
-    column-gap: 30px;
-
-    span {
-        display: grid;
-        justify-content: center;
-        align-items: center;
-        width: 80px;
-        height: 80px;
-        border: 4px dashed #4772E6;
-        border-radius: 50%;
-        font-size: 44px;
-        font-weight: bold;
-        line-height: 1;
-        color: #4772E6;
-      }
-
-      p{
-        color: var(--Personal-colors-black);
-        font-size: 34px;
-        font-style: normal;
-        font-weight: 600;
-        line-height: normal;
-      }
+.creating__post {
+  display: grid;
+  grid-auto-flow: row;
+  row-gap: 30px;
+  padding-left: 110px;
 }
 
-.creating__post{
-    display: grid;
-    grid-auto-flow: row;
-    row-gap: 30px;
-    padding-left: 110px;
+.data {
+  display: grid;
+  grid-auto-flow: column;
+  justify-content: space-between;
 }
 
-.data{
-    display: grid;
-    grid-auto-flow: column;
-    justify-content: space-between;
+.post_data {
+  display: grid;
+  grid-auto-flow: row;
+  align-content: space-between;
 }
 
-.post_data{
-    display: grid;
-    grid-auto-flow: row;
-    align-content: space-between;
+.block {
+  display: grid;
+  grid-auto-flow: row;
+  row-gap: 25px;
 }
-
-.block{
-    display: grid;
-    grid-auto-flow: row;
-    row-gap: 25px;
-}
-
-
