--- a/src/widgets/walletHistory/UI/styles.module.scss
+++ b/src/widgets/walletHistory/UI/styles.module.scss
@@ -1,31 +1,30 @@
-.wrapper{
-    display: grid;
-    grid-auto-flow: row;
-    row-gap: 30px;
-    margin-top: 40px;
+.wrapper {
+  display: grid;
+  grid-auto-flow: row;
+  row-gap: 30px;
+  margin-top: 40px;
 }
 
-.top{
-    border-bottom: 2px solid #D9D9D9;
-    padding-bottom: 40px;
+.top {
+  border-bottom: 2px solid #d9d9d9;
+  padding-bottom: 40px;
 
-    p{
-
-        color: var(--Personal-colors-black);
-        font-size: 32px;
-        font-style: normal;
-        font-weight: 600;
-        line-height: normal;
-    }
+  p {
+    color: var(--Personal-colors-black);
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+  }
 }
 
-.filter{
-    display: grid;
-    justify-content: start;
+.filter {
+  display: grid;
+  justify-content: start;
 }
 
-.cards{
-    display: grid;
-    grid-auto-flow: row;
-    row-gap: 10px;
+.cards {
+  display: grid;
+  grid-auto-flow: row;
+  row-gap: 10px;
 }
