--- a/src/features/chatCard/UI/styles.module.scss
+++ b/src/features/chatCard/UI/styles.module.scss
@@ -16,8 +16,8 @@
 
 .logo {
   img {
-    width: 50px;
-    height: 50px;
+    width: 35px;
+    height: 35px;
     border-radius: 50%;
     border: 0.5px solid #4772e6;
   }
@@ -33,10 +33,10 @@
   display: grid;
   grid-auto-flow: row;
   row-gap: 10px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap; /* Предотвращает перенос текста */
   max-width: 100%;
+  justify-content: space-between;
+  align-content: space-between;
+  margin: 5px 0px;
 
   p {
     color: var(--Sub-text);
@@ -44,6 +44,9 @@
     font-style: normal;
     font-weight: 600;
     line-height: 0.75;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
   }
 
   span {
@@ -52,11 +55,15 @@
     font-style: normal;
     font-weight: 400;
     line-height: 0.75;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
   }
 }
 
 .date {
   text-align: end;
+  margin: 5px 0px;
   p {
     color: var(--Sub-text);
     font-size: 12px;
