--- a/src/features/chatMessages/UI/styles.module.scss
+++ b/src/features/chatMessages/UI/styles.module.scss
@@ -9,36 +9,34 @@
   column-gap: 10px;
   justify-content: start;
   padding: 10px;
-}
 
-.logo {
-  img {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    border: 0.5px solid #4772e6;
+  .logo {
+    img {
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      border: 0.5px solid #4772e6;
+    }
+  }
+  
+  .description {
+    display: grid;
+    grid-auto-flow: row;
+    row-gap: 10px;
+  
+    p {
+      color: var(--Sub-text);
+      font-size: 12px;
+      font-style: normal;
+      font-weight: 600;
+      line-height: 0.75;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
   }
 }
 
-.card__message {
-  display: grid;
-  grid-auto-flow: column;
-  justify-content: space-between;
-}
-
-.description {
-  display: grid;
-  grid-auto-flow: row;
-  row-gap: 10px;
-
-  p {
-    color: var(--Sub-text);
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 0.75;
-  }
-}
 
 .all__messages {
   display: grid;
@@ -53,6 +51,12 @@
 
   &::-webkit-scrollbar-thumb {
     display: none;
+  }
+
+  .messages_wrapper {
+    display: grid;
+    grid-auto-flow: row;
+    row-gap: 15px;
   }
 }
 
@@ -76,9 +80,11 @@
   font-style: normal;
   font-weight: 500;
   max-width: 80%;
+  row-gap: 5px;
 
   span {
     text-align: end;
+    opacity: 0.5;
   }
 
   &.recipient {
