--- a/src/features/profileData/UI/styles.module.scss
+++ b/src/features/profileData/UI/styles.module.scss
@@ -3,7 +3,7 @@
   grid-auto-flow: row;
   align-items: center;
   text-align: center;
-  row-gap: 40px;
+  row-gap: 20px;
 
   p {
     color: var(--Personal-colors-black);
@@ -24,17 +24,27 @@
 
 .row {
   display: grid;
-  grid-auto-flow: column;
-  align-items: center;
-  justify-content: space-between;
+  grid-template: 1fr 1fr / 1fr;
+  width: 100%;
+  column-gap: 20px;
+}
+
+.row.createProfile {
+  grid-template: 1fr / 0.3fr 1fr;
 }
 
 .left {
   display: grid;
   grid-auto-flow: column;
   align-items: center;
-  justify-content: space-between;
+  justify-content: start;
   column-gap: 10px;
+
+  svg {
+    max-width: none;
+    width: 15px;
+    height: 15px;
+  }
 
   span {
     color: var(--Personal-colors-black);
@@ -42,5 +52,50 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+  }
+}
+
+.right {
+  width: 100%;
+
+  .input {
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    color: #555;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    transition: border-color 0.5s;
+  }
+
+  .error {
+    border: 1px solid red;
+    animation: shake 0.3s ease-in-out;
+
+    &::placeholder {
+      color: red;
+    }
+  }
+}
+
+@keyframes shake {
+  0% {
+    transform: translateX(0);
+  }
+
+  25% {
+    transform: translateX(-5px);
+  }
+
+  50% {
+    transform: translateX(5px);
+  }
+
+  75% {
+    transform: translateX(-5px);
+  }
+
+  100% {
+    transform: translateX(0);
   }
 }
