--- a/src/features/selectDescription/UI/styles.module.scss
+++ b/src/features/selectDescription/UI/styles.module.scss
@@ -25,44 +25,54 @@
       transform: translate(-50%, -50%);
     }
   }
-}
 
-.title {
-  display: grid;
-  grid-auto-flow: column;
-  align-items: center;
-  justify-content: center;
-  column-gap: 10px;
-}
-
-.field {
-  display: grid;
-  grid-auto-flow: row;
-  align-items: center;
-  align-content: space-between;
-  border-radius: 12px;
-  padding: 30px 20px;
-  margin: 0 100px;
-  border: 1px solid var(--Inside-container);
-  background: var(--Personal-colors-White);
-  height: 250px;
-  overflow: hidden;
-  color: #a3a0a0;
-  font-size: 12px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-
-  textarea {
-    width: 100%;
-    resize: none;
-    outline: none;
+  .title {
+    display: grid;
+    grid-auto-flow: column;
+    align-items: center;
+    justify-content: center;
+    column-gap: 10px;
   }
 
-  div {
+  .field {
     display: grid;
     grid-auto-flow: row;
     align-items: center;
-    justify-content: end;
+    align-content: space-between;
+    border-radius: 12px;
+    padding: 30px 20px;
+    margin: 0 100px;
+    border: 1px solid var(--Inside-container);
+    background: var(--Personal-colors-White);
+    overflow: hidden;
+    max-height: 250px;
+
+    textarea {
+      width: 100%;
+      resize: none;
+      outline: none;
+
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: normal;
+
+      &::placeholder {
+        font-size: 12px;
+        color: #a3a0a0;
+      }
+    }
+
+    p {
+      display: grid;
+      grid-auto-flow: row;
+      align-items: center;
+      justify-content: end;
+      color: #a3a0a0;
+      font-size: 12px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: 0.75;
+    }
   }
 }
