--- a/src/features/selectSymbols/UI/styles.module.scss
+++ b/src/features/selectSymbols/UI/styles.module.scss
@@ -1,8 +1,7 @@
 .wrapper {
   display: grid;
-  grid-auto-flow: column;
+  grid-template: 1fr / 0.9fr 1fr;
   align-items: center;
-  justify-content: space-between;
 
   p {
     color: var(--Personal-colors-black);
@@ -25,33 +24,33 @@
       transform: translate(-50%, -50%);
     }
   }
-}
+  .title {
+    display: grid;
+    grid-auto-flow: column;
+    align-items: center;
+    column-gap: 10px;
+    justify-content: start;
+  }
 
-.title {
-  display: grid;
-  grid-auto-flow: column;
-  align-items: center;
-  column-gap: 10px;
-}
+  .slider {
+    display: grid;
+    grid-auto-flow: row;
+    row-gap: 15px;
 
-.slider {
-  width: 300px;
-  margin: 20px auto;
-}
+    .position {
+      display: grid;
+      grid-auto-flow: column;
+      justify-content: space-between;
+      align-items: center;
+      text-align: center;
 
-.position {
-  display: grid;
-  grid-auto-flow: column;
-  justify-content: space-between;
-  align-items: center;
-  text-align: center;
-
-  p {
-    color: var(--Personal-colors-black);
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    line-height: 0.75;
+      p {
+        color: var(--Personal-colors-black);
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 0.75;
+      }
+    }
   }
 }
