--- a/src/features/sendMessage/UI/styles.module.scss
+++ b/src/features/sendMessage/UI/styles.module.scss
@@ -1,7 +1,7 @@
 .wrapper {
   display: grid;
-  grid-auto-flow: column;
-  // grid-template:  1fr 1fr/0.3fr/0.3fr;
+  grid-template: 1fr / 0.07fr 1fr 0.07fr;
+  align-items: center;
   column-gap: 10px;
   padding: 10px;
 
@@ -15,12 +15,13 @@
     justify-content: space-between;
     align-items: center;
   }
-}
 
-.input {
-  padding: 8px 16px;
-  align-items: center;
-  border-radius: 10px;
-  background: var(--Blue-Grey-Blue-Grey-050, #f0f4f8);
-  width: 100%;
+  .input {
+    padding: 8px 16px;
+    align-items: center;
+    justify-content: stretch;
+    border-radius: 10px;
+    background: var(--Blue-Grey-Blue-Grey-050, #f0f4f8);
+    width: 100%;
+  }
 }
