--- a/src/shared/styles/variables.scss
+++ b/src/shared/styles/variables.scss
@@ -3,7 +3,7 @@
   --container-padding-all: 15px;
   --container-padding-side: 50px;
   --container-padding-top: 80px;
-
+  --Subtitle-text: #666;
   --secondary-text: #606060;
 
   --Gradients-Gradient-1: linear-gradient(
@@ -30,6 +30,7 @@
   );
 
   --Personal-colors-black: #000;
+  --Personal-colors-White: #fff;
   --Personal-colors-Green: #48d23c;
   --Personal-colors-green-hover: #6bda62;
   --Personal-colors-Click: #efe6ff;
