--- a/src/widgets/catalogBlock/UI/catalogList/UI/styles.module.scss
+++ b/src/widgets/catalogBlock/UI/catalogList/UI/styles.module.scss
@@ -4,7 +4,7 @@
   row-gap: 10px;
 }
 
-.filters {
+.filters__row {
   display: grid;
   grid-auto-flow: column;
   align-items: center;
@@ -18,5 +18,11 @@
     font-style: normal;
     font-weight: 700;
     line-height: normal;
+  }
+
+  .filters {
+    display: grid;
+    grid-auto-flow: column;
+    column-gap: 20px;
   }
 }
