--- a/src/widgets/header/UI/chat/styles.module.scss
+++ b/src/widgets/header/UI/chat/styles.module.scss
@@ -1,9 +1,3 @@
-.wrapper {
-  width: 30px;
-  height: 30px;
-  cursor: pointer;
-}
-
 .modal {
   display: grid;
   align-items: center;
@@ -18,127 +12,169 @@
   overflow: auto;
   background-color: rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(5px);
-}
 
-.modalContent {
-  display: grid;
-  // width: 650px;
-  align-items: center;
-  grid-auto-flow: row;
-  row-gap: 25px;
-  position: relative;
-  margin: 15% auto;
-  // padding: 35px;
-  border-radius: 25px;
-  background: #fff;
-}
-
-.top {
-  display: grid;
-  grid-auto-flow: column;
-  align-items: center;
-  justify-content: space-between;
-
-  p {
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 12px; /* 50% */
-    color: #4772e6;
-  }
-
-  svg {
-    width: 20px;
-    height: 20px;
-  }
-}
-
-.content {
-  display: grid;
-  grid-template: 1fr / 0.7fr 1fr;
-  max-width: 40vw;
-  column-gap: 10px;
-}
-.content__left {
-  display: grid;
-  grid-auto-flow: row;
-  align-content: start;
-  border: 0.5px solid rgba(0, 0, 0, 0.3);
-
-  big {
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 0.75;
-    color: #4772e6;
-    padding: 25px 0;
-    text-align: center;
-  }
-}
-
-.administration {
-  display: grid;
-  grid-auto-flow: column;
-  align-items: center;
-  justify-content: space-between;
-  padding: 10px 10px 10px 35px;
-  cursor: pointer;
-
-  div {
+  .content {
     display: grid;
-    justify-content: center;
-    align-content: center;
+    margin: 15% auto;
+    border-radius: 25px;
+    background: #fff;
+    grid-template: 1fr / 0.7fr 1fr;
+    max-width: 40vw;
+    column-gap: 10px;
+    height: 600px;
+    overflow: hidden;
 
-    img {
-      width: 25px;
-      height: 25px;
-      border-radius: 50%;
-      border: 0.5px solid #4772e6;
+    .content__left {
+      display: grid;
+      grid-auto-flow: row;
+      align-content: space-between;
+      border-right: 0.5px solid rgba(0, 0, 0, 0.3);
+
+      big {
+        font-size: 24px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 0.75;
+        color: #4772e6;
+        padding: 25px 0;
+        text-align: center;
+      }
+
+      .filter {
+        display: grid;
+        grid-auto-flow: column;
+        padding: 0 10px;
+        margin-bottom: 10px;
+
+        li {
+          font-size: 14px;
+          font-style: normal;
+          font-weight: 600;
+          line-height: 0.75;
+          padding: 10px 0;
+        }
+      }
+
+      .administration {
+        display: grid;
+        grid-auto-flow: column;
+        align-items: center;
+        justify-content: space-between;
+        padding: 10px 10px 10px 35px;
+        cursor: pointer;
+
+        div {
+          display: grid;
+          justify-content: center;
+          align-content: center;
+
+          img {
+            width: 25px;
+            height: 25px;
+            border-radius: 50%;
+            border: 0.5px solid #4772e6;
+          }
+        }
+
+        p {
+          color: var(--Sub-text);
+          font-size: 12px;
+          font-style: normal;
+          font-weight: 600;
+          line-height: 0.75;
+        }
+      }
+
+      .all_chats {
+        display: grid;
+        grid-auto-flow: row;
+        align-content: start;
+        overflow-y: scroll;
+        height: 445px;
+
+        &::-webkit-scrollbar {
+          display: none;
+        }
+
+        &::-webkit-scrollbar-thumb {
+          display: none;
+        }
+      }
+    }
+
+    .content__right {
+      display: grid;
+      grid-auto-flow: row;
+      align-content: space-between;
+      padding-right: 10px;
+      padding-bottom: 10px;
+
+      .top {
+        display: grid;
+        grid-auto-flow: column;
+        align-items: center;
+        justify-content: space-between;
+        position: relative; /* Добавляем относительное позиционирование для .top */
+
+        p {
+          font-size: 24px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: 12px; /* 50% */
+          color: #4772e6;
+        }
+
+        button {
+          position: absolute; /* Добавляем абсолютное позиционирование */
+          right: 25px; /* Устанавливаем расстояние от правого края */
+          top: 25px;
+          svg {
+            width: 20px;
+            height: 20px;
+          }
+        }
+      }
+
+      .info {
+        display: grid;
+        grid-auto-flow: column;
+        column-gap: 10px;
+        justify-content: start;
+        padding: 15px;
+
+        .logo {
+          img {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            border: 0.5px solid #4772e6;
+          }
+        }
+
+        .description {
+          display: grid;
+          grid-auto-flow: row;
+          row-gap: 10px;
+          margin: 5px 0;
+
+          p {
+            color: var(--Sub-text);
+            font-size: 12px;
+            font-style: normal;
+            font-weight: 600;
+            line-height: 0.75;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+          }
+        }
+      }
     }
   }
-
-  p {
-    color: var(--Sub-text);
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 0.75;
-  }
 }
 
-.all_chats {
-  display: grid;
-  grid-auto-flow: row;
-  align-content: start;
-  overflow-y: scroll;
-  height: 450px;
-
-  &::-webkit-scrollbar {
-    display: none;
-  }
-
-  &::-webkit-scrollbar-thumb {
-    display: none;
-  }
-}
-
-.content__right {
+.left {
   display: grid;
   grid-auto-flow: row;
   align-content: space-between;
-  padding-right: 10px;
-  padding-bottom: 10px;
-}
-
-.top {
-  display: grid;
-  align-items: center;
-  justify-content: end;
-  padding: 25px 30px 20px 30px;
-  button {
-    svg {
-      width: 20px;
-      height: 20px;
-    }
-  }
 }
